Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24458

StyledText sets incorrect text size when using headings or font tag

XMLWordPrintable

    • Ida7723f6e4f4b9fd3a6878076f4beaf5bda8f7f7

      Headings and font tags are modifying the text size based on the original pointSize even when pixelSize is set resulting in a negative size.
      Also this size is not updated when the font changes.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bodson Yann Bodson (Inactive)
            bodson Yann Bodson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes